Add teacher features + AI advanced endpoints + progress APIs